@@ -1,5 +1,7 @@
 2018-02-06  Carl Hetherington  <cth@carlh.net>
 
+	* Fix problems with text subtitle files containing OS X line-endings.
+
 	* Version 2.11.49 released.
 
 2018-02-05  Carl Hetherington  <cth@carlh.net>
